--- a/style.css
+++ b/style.css
@@ -5,12 +5,30 @@
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   background-color: beige;
+  position: relative;
 }
 header {
   text-align: center;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
-.title {
-  font-size: large;
+.nameBanner {
+  font-size: x-large;
+  border-bottom: 1px solid rgb(117, 117, 117);
+  height: 40px;
+}
+.menuBar {
+  height: 25px;
+  background-color: rgba(253, 247, 237, 0.7);
+  display: flex;
+  align-items: center;
+}
+ul {
+  display: flex;
+  width: 100%;
+  list-style: none;
+  justify-content: space-around;
 }
 .homeContainer {
   text-align: center;
