--- a/style.css
+++ b/style.css
@@ -4,38 +4,44 @@
 }
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  background-color: beige;
+  background-color: rgb(252, 252, 246);
   position: relative;
 }
 header {
-  text-align: center;
-  position: absolute;
   width: 100%;
-  z-index: 1;
+}
+.nameBanner p {
+  padding-top: 30px;
+  padding-left: 30px;
 }
 .nameBanner {
+  color: aqua;
+  background-image: url("longBanner.png");
+  background-size: contain;
   font-size: x-large;
-  border-bottom: 1px solid rgb(117, 117, 117);
-  height: 40px;
+  height: 70px;
 }
 .menuBar {
   height: 25px;
-  background-color: rgba(253, 247, 237, 0.7);
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid rgb(117, 117, 117);
+
+  position: absolute;
+  top: 100px;
+  z-index: 1;
 }
 ul {
   display: flex;
   width: 100%;
+  margin-left: 30px;
+  margin-right: 15px;
   list-style: none;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .homeContainer {
-  text-align: center;
 }
 p {
-  padding: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 35px;
 }
 img {
   width: 100%;
