--- a/style.css
+++ b/style.css
@@ -28,19 +28,32 @@ header {
   top: 100px;
   z-index: 1;
 }
+a {
+  text-decoration: none;
+}
+a,
+a:visited {
+  color: inherit;
+}
 ul {
   display: flex;
   width: 100%;
   margin-left: 30px;
   margin-right: 15px;
   list-style: none;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .homeContainer {
+  margin: 10px;
+}
+h4 {
+  margin: 20px;
+  text-align: center;
 }
 p {
-  margin-top: 10px;
-  margin-left: 10px;
+  font-size: 14px;
+  color: gray;
+  margin-top: 0px;
   margin-bottom: 35px;
 }
 img {
