--- a/style.css
+++ b/style.css
@@ -10,23 +10,22 @@ body {
 header {
   width: 100%;
 }
-.nameBanner {
+.banner {
   display: flex;
-
   justify-content: center;
-  background-color: black;
+  background-color: rgb(32, 32, 32);
 }
-.handstyle {
+.handstyleDiv {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 80%;
 }
-.handstylePic {
+.handstyleImage {
   height: 40px;
   width: 90px;
-  margin: 7px;
+  margin: 3px;
 }
 
 .line {
@@ -42,11 +41,52 @@ header {
   width: 10%;
   margin: 10px;
 }
+.menu {
+  color: white;
+  position: absolute;
+  z-index: 3;
+  width: 80%;
+  height: 100vh;
+  left: 100%;
+  background-color: black;
+  transition: 0.7s;
+}
+.closeMenu {
+  margin: 20px;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+li {
+  font-size: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
 .muralLink {
   background-color: ;
   position: absolute;
   top: 90px;
-  z-index: 1;
+}
+.containContact {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.contact {
+  position: absolute;
+  top: -70px;
+
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  color: white;
+  background-color: black;
+}
+.cacoPics {
+  margin: 30px 0px 40px 0px;
 }
 a {
   text-decoration: none;
