--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-color: rgb(252, 252, 246);
   position: relative;
 }
+
 header {
   width: 100%;
 }
@@ -15,6 +16,7 @@ header {
   justify-content: center;
   background-color: rgb(32, 32, 32);
 }
+
 .handstyleDiv {
   display: flex;
   flex-direction: column;
@@ -43,13 +45,13 @@ header {
 }
 .menu {
   color: white;
+  right: 100%;
   position: absolute;
   z-index: 3;
   width: 80%;
   height: 100vh;
-  left: 100%;
   background-color: black;
-  transition: 0.7s;
+  transition: 1s;
 }
 .closeMenu {
   margin: 20px;
@@ -65,10 +67,13 @@ li {
   margin-top: 30px;
   margin-bottom: 20px;
 }
-.muralLink {
-  background-color: ;
-  position: absolute;
-  top: 90px;
+
+.galleryHeader {
+  width: 100%;
+  height: 10px;
+  margin-bottom: 30px;
+  background-image: url("geometricTriangle.jpg");
+  background-size: contain;
 }
 .containContact {
   position: relative;
@@ -96,8 +101,9 @@ a {
   margin: 10px;
 }
 h4 {
-  margin: 20px;
+  margin: 20px 0px 0px 0px;
   text-align: center;
+  padding: 2px;
 }
 p {
   font-size: 14px;
