--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 10%;
   margin: 10px;
 }
@@ -50,30 +51,42 @@ header {
   z-index: 3;
   width: 80%;
   height: 100vh;
-  background-color: black;
+  background-image: url("menuBackground.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
   transition: 1s;
 }
 .closeMenu {
-  margin: 20px;
+  height: 25px;
+  width: 25px;
+  margin: 10px;
+  background-color: black;
+  border: 1px solid white;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+a:visited {
+  color: black;
 }
 ul {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin-top: 80%;
 }
 li {
-  font-size: 30px;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .galleryHeader {
   width: 100%;
   height: 10px;
   margin-bottom: 30px;
-  background-image: url("geometricTriangle.jpg");
-  background-size: contain;
 }
 .containContact {
   position: relative;
@@ -100,7 +113,7 @@ a {
 .homeContainer {
   margin: 10px;
 }
-h4 {
+.sectionHeader {
   margin: 20px 0px 0px 0px;
   text-align: center;
   padding: 2px;
