--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 .banner {
   display: flex;
   justify-content: center;
-  background-color: rgb(32, 32, 32);
+  background-color: rgb(247, 244, 237);
 }
 
 .handstyleDiv {
@@ -34,7 +34,7 @@ header {
   margin: 2px;
   width: 15px;
   height: 2px;
-  background-color: honeydew;
+  background-color: rgb(27, 27, 27);
 }
 .hamburger {
   display: flex;
@@ -61,7 +61,7 @@ header {
   width: 25px;
   margin: 10px;
   background-color: black;
-  border: 1px solid white;
+  border: 1px solid rgb(226, 221, 204);
   border-radius: 25px;
   display: flex;
   flex-direction: column;
@@ -75,12 +75,13 @@ ul {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  margin-top: 80%;
+  margin-top: 175px;
 }
 li {
+  color: black;
   font-size: 20px;
   margin-top: 20px;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .galleryHeader {
