work on desktop

--- a/style.css
+++ b/style.css
@@ -51,70 +51,60 @@ header {
 }
 .bevan {
   height: 75px;
-  transform: translateX(-7px);
-  animation-name: fadeIn5;
-  animation-duration: 2000ms;
 }
-@keyframes fadeIn {
-  0% {
-    opacity: 0%;
-  }
-  20% {
-    opacity: 0%;
-  }
-  40% {
-    opacity: 100%;
-  }
+
+.landingPageWindow {
+  height: 80vh;
+  overflow: hidden;
 }
-@keyframes fadeIn3 {
-  0% {
-    opacity: 0%;
-  }
-  20% {
-    opacity: 0%;
-  }
-  40% {
-    opacity: 100%;
-  }
+.landingDiv {
+  height: 100%;
+  width: 100%;
 }
-@keyframes fadeIn2 {
-  0% {
-    opacity: 0%;
-  }
-  50% {
-    opacity: 0%;
-  }
-  60% {
-    opacity: 100%;
-  }
+.landingPic {
+  transform: scale(1.1);
+  height: auto;
+  width: 100%;
+  animation-name: zoomIn;
+  animation-duration: 20s;
 }
-@keyframes fadeIn4 {
+
+@keyframes zoomIn {
   0% {
-    opacity: 0%;
+    transform: scale(1);
   }
-  60% {
-    opacity: 0%;
-  }
-  70% {
-    opacity: 100%;
-  }
-}
-@keyframes fadeIn5 {
-  0% {
-    opacity: 0%;
-  }
-  80% {
-    opacity: 0%;
-  }
+
   100% {
-    opacity: 100%;
+    transform: scale(1.1);
   }
 }
-.landingImg {
-  height: 100vh;
-  background-image: url("wcLanding.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
+.muralGalleryText {
+  color: white;
+  text-shadow: 1px 1px 17px black;
+  font-size: 3em;
+  position: absolute;
+  top: 60%;
+  left: 40px;
+}
+.mainBodyContainer {
+  height: 1300px;
+  border: 1px solid pink;
+  display: flex;
+}
+.bodyLeftColumn {
+  width: 50%;
+  height: 100%;
+}
+.cacoMain {
+  width: 275px;
+  display: block;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.bodyRightColumn {
+  width: 50%;
+  height: 100%;
 }
 footer {
   height: 200px;
